# ArmoniK

./: .gitignore  .gitmodules  .readthedocs.yaml  CHANGELOG.md  Dockerfile  Makefile  README.DOCKER.md  README.ON-AWS-CLOUD.md  README.ON-PREMISE-LINUX.md  README.ON-PREMISE-WINDOWS-NO-DOCKER-DESKTOP.md  README.ON-PREMISE-WINDOWS.md  README.ON-PREMISE.md  README.md  README.md.old  action.yml  armonik-versions.txt  azure-pipelines.yml  docfx.json  h --set-upstream origin update_usernamegit push --set-upstream origin update_username  index.html  manifest.json  notes.md  nuget-versions.txt  renovate.json  requirements.txt  versions.tf  versions.tfvars.json  xrefmap.yml
.docs/: .eslintrc  .gitignore  .markdownlint.yml  .markdownlintignore  README.md  app.config.ts  conf.py  eslint.config.mjs  index.rst  nuxt.config.ts  package.json  pnpm-lock.yaml  requirements.txt  test_plan.md
.github/: PULL_REQUEST_TEMPLATE.md
Documentation/: docfx.json  index.md  toc.yml
api/: index.html
articles/: intro.html  toc.html
benchmarking/: README.md  aws.tfvars  benchmarking_stats.csv
configurations/: Makefile  onpremise-aws-config.conf  onpremise-wsl-config.conf  set-envvars.sh
configure/: aws-config.conf  bootstrap.sh  onpremise-aws-config.conf  onpremise-linux-config.conf  onpremise-wsl-config.conf
dev/: temp
devs_documentation/: index.md
docs/: Architecture.ipynb  Happy Flow Diagram Sequence  Partitionning.md  PollingAgentClientDiagram.md  README.DOCKER.md  README.ON-AWS-CLOUD.md  (+12 more)
tools/metrics/import/import_manager/: .gitignore  common.py  main.py  pyproject.toml
(+2314 files in other folders)
